--- a/app/src/main/res/menu/menu_entries.xml
+++ b/app/src/main/res/menu/menu_entries.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="me.jerryhanks.journalapp.ui.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_logout"
+        android:icon="@drawable/ic_exit_to_app"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
