--- a/app/src/main/res/layout/fragment_entires.xml
+++ b/app/src/main/res/layout/fragment_entires.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auth.AuthFragment">
+    tools:context=".ui.signIn.SignInFragment">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
