feat : add a page where we can create or modify existing diary.

--- a/app/src/main/res/layout/fragment_entires.xml
+++ b/app/src/main/res/layout/fragment_entires.xml
@@ -38,7 +38,7 @@
     </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/fabCreateDiary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
