--- a/app/src/main/res/menu/menu_modify_diary.xml
+++ b/app/src/main/res/menu/menu_modify_diary.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_modify"
+        android:id="@+id/action_create_or_update"
         android:title="@string/action_add" />
 
 </menu>
