refactor : add or create note layout

--- a/app/src/main/res/layout/fragment_modify.xml
+++ b/app/src/main/res/layout/fragment_modify.xml
@@ -39,10 +39,11 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:ems="10"
-            android:hint="@string/hint_diary_title"
+            android:ems="14"
+            android:hint="@string/hint_title"
             android:inputType="textMultiLine"
             android:maxLines="3"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextContent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
