--- a/app/src/main/res/menu/menu_diary_deatails.xml
+++ b/app/src/main/res/menu/menu_diary_deatails.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_delete_note"
+        android:icon="@drawable/ic_delete"
+        android:title="@string/action_delete_note"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_modify"
         android:icon="@drawable/ic_edit"
         android:title="@string/action_update"
