refactor : add ime options to editext

--- a/app/src/main/res/layout/fragment_modify.xml
+++ b/app/src/main/res/layout/fragment_modify.xml
@@ -41,6 +41,7 @@
             android:layout_marginTop="8dp"
             android:ems="14"
             android:hint="@string/hint_title"
+            android:imeOptions="actionNext"
             android:inputType="textMultiLine"
             android:maxLines="3"
             android:textStyle="bold"
@@ -61,6 +62,7 @@
             android:layout_marginStart="8dp"
             android:ems="10"
             android:hint="@string/hint_content"
+            android:imeOptions="actionDone"
             android:inputType="textMultiLine"
             android:maxLines="10"
             app:layout_constraintBottom_toBottomOf="parent"
