refactor : increase the font for createdAt and modifiedAt TextViews

--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -63,7 +63,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Created: 27 June, 2018."
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textSize="14sp"
         android:textStyle="italic|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +82,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Updated: 27 June, 2018."
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textSize="14sp"
         android:textStyle="italic|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
