--- a/app/src/main/res/layout/fragment_modify.xml
+++ b/app/src/main/res/layout/fragment_modify.xml
@@ -26,6 +26,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/creat_update_bg"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
