fix : add windowSoftInputMethod to MainActivity

--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -15,9 +15,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
-        android:gravity="center"
+        android:gravity="start"
         android:lines="2"
-        android:text="Title of the Note this should be single line text as you can see"
+        tools:text="Title of the Note this should be single line text as you can see"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
