feat : add delete note

--- a/app/src/main/res/layout/fragment_entires.xml
+++ b/app/src/main/res/layout/fragment_entires.xml
@@ -32,6 +32,7 @@
             android:id="@+id/notesRecycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +44,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,17 +54,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
+                android:scaleType="centerCrop"
                 android:layout_marginTop="0dp"
                 android:src="@drawable/post_it_notes" />
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/dp_150"
+                android:layout_marginBottom="@dimen/dp_160"
                 android:gravity="center"
                 android:text="@string/no_notes_available"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
